# AstraPlugins

./: .gitignore  dice-roller-0.1.0.astraplugin  json-tools-0.1.0.astraplugin  text-utils-0.1.0.astraplugin
.github/workflows/: publish-python.yml  publish-rust.yml  publish-ts.yml
astra-plugin-cli/: Cargo.toml
astra-plugin-cli/proto/: plugin.proto
astra-plugin-cli/src/: main.rs
astra-plugin-cli/src/commands/: build.rs  create.rs  dev.rs  keygen.rs  mod.rs  validate.rs
astra-plugin-cli/src/templates/: mod.rs  python.rs  rust.rs  typescript.rs
astra-plugin-sdk/: Cargo.toml  build.rs
astra-plugin-sdk-python/: README.md  pyproject.toml
astra-plugin-sdk-python/astra_plugin_sdk/: __init__.py  daemon_client.py  decorators.py  host_client.py  i18n.py  plugin.py
astra-plugin-sdk-python/astra_plugin_sdk/proto/: __init__.py  plugin.proto  plugin_pb2.py  plugin_pb2_grpc.py
astra-plugin-sdk-ts/: README.md  package.json  tsconfig.json
astra-plugin-sdk-ts/src/: daemon-client.ts  host-client.ts  i18n.ts  index.ts  plugin.proto  plugin.ts  proto-loader.ts  types.ts
astra-plugin-sdk/proto/: plugin.proto
astra-plugin-sdk/src/: capability.rs  daemon_client.rs  events.rs  host_client.rs  i18n.rs  lib.rs  runner.rs
docs/: README.md
docs/de/: README.md  capabilities.md  cli.md  getting-started.md  manifest.md  publishing.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
docs/en/: README.md  capabilities.md  cli.md  getting-started.md  manifest.md  publishing.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
docs/es/: README.md  capabilities.md  cli.md  getting-started.md  manifest.md  publishing.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
docs/ja/: README.md  capabilities.md  cli.md  getting-started.md  manifest.md  publishing.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
docs/ru/: README.md  capabilities.md  cli.md  getting-started.md  manifest.md  publishing.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
docs/uk/: README.md  capabilities.md  cli.md  getting-started.md  manifest.md  publishing.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
docs/zh-CN/: README.md  capabilities.md  cli.md  getting-started.md  manifest.md  publishing.md  sdk-python.md  sdk-rust.md  sdk-typescript.md
examples/bad-apple/: Cargo.toml  SETUP.md  plugin.toml
examples/bad-apple/src/: main.rs
examples/bad-apple/tools/: extract_frames.py
examples/bad-apple/ui/: bad-apple-bg.js  bad-apple-player.js  renderer.js
examples/companion/: Cargo.toml  plugin.toml
examples/companion/locales/: en.json  ru.json
examples/companion/src/: main.rs
examples/companion/ui/: cat.html  cat.js
examples/dice-roller/: .gitignore  Cargo.toml  README.md  plugin.toml
examples/dice-roller/src/: main.rs
examples/doom/: Cargo.toml  SETUP.md  plugin.toml
examples/doom/src/: main.rs
examples/doom/ui/: chocolate-doom.js  doom.js
examples/json-tools/: .gitignore  README.md  package.json  plugin.toml
examples/json-tools/proto/: plugin.proto
examples/json-tools/src/: index.ts
examples/telegram-client/: Cargo.toml  plugin.toml
examples/telegram-client/locales/: en.json  ru.json
examples/telegram-client/src/: bot.rs  commands.rs  main.rs  state.rs  streaming.rs  sync.rs  telegram.rs  types.rs
examples/text-utils/: .gitignore  README.md  plugin.toml  pyproject.toml  requirements.txt
examples/text-utils/proto/: plugin.proto
examples/text-utils/src/: plugin.py
examples/web-chat/: Cargo.toml  plugin.toml
examples/web-chat/src/: main.rs  web.rs
proto/: plugin.proto
