[package]
name = "astra-plugin-sdk"
version = "0.1.3"
edition = "2024"
description = "Rust SDK for building Astra plugins"
license = "MIT"
repository = "https://github.com/mihailinl/AstraPlugins"

[dependencies]
# gRPC
tonic = { version = "0.12", features = ["gzip"] }
prost = "0.13"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
async-trait = "0.1"

# CLI arg parsing (for --daemon-addr and --plugin-id)
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12"
