[package]
name = "telegram_client"
version = "0.1.0"
edition = "2024"

[dependencies]
astra-plugin-sdk = { path = "../../astra-plugin-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
frankenstein = { version = "0.49", features = ["client-reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
tonic = "0.12"
tokio-stream = "0.1"
