[package]
name = "web_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
astra-plugin-sdk = { path = "../../astra-plugin-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tonic = "0.12"
tokio-stream = "0.1"
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
